--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="options_menu_icon_color">#FFFFFF</color>
+    <color name="symptom_chip_color">#00796B</color>
 </resources>
