--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Asklepius" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Asklepius" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#1976D2</item>
         <item name="colorPrimaryVariant">#2196F3</item>
@@ -13,5 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">#202124</item>
+        <item name="android:textColorPrimary">#FFFFFF</item>
+        <!-- Works on status bar for some reason -->
+        <item name="colorSurface">#313235</item>
     </style>
 </resources>
