--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Asklepius" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Asklepius" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#003485</item>
         <item name="colorPrimaryVariant">#0076BE</item>
