Changed font, still in progress. Added padding on view patient data list.

--- a/app/src/main/res/layout/activity_view_uploaded_data.xml
+++ b/app/src/main/res/layout/activity_view_uploaded_data.xml
@@ -10,9 +10,14 @@
         android:id="@+id/textView_uploaded_data_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/josefin_sans_bold"
+        android:gravity="left"
         android:padding="8dp"
         android:text="@string/uploaded_patient_data"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,6 +26,8 @@
         android:id="@+id/divider3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:insetLeft="10dp"
+        android:insetRight="10dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toBottomOf="@id/textView_uploaded_data_heading"/>
 
@@ -28,9 +35,9 @@
         android:id="@+id/recylerView_uploaded_patient_data"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
