--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
+        android:fontFamily="@font/josefin_sans_bold"
         android:text="@string/welcome_to_asklepius"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
