Added montserrat font family

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,11 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/josefin_sans</item>
         <item>@font/josefin_sans_bold</item>
+        <item>@font/montserrat_alternates</item>
+        <item>@font/montserrat_alternates_bold</item>
         <item>@font/montserrat</item>
+        <item>@font/montserrat_bold</item>
+        <item>@font/montserrat_subrayada</item>
+        <item>@font/montserrat_subrayada_bold</item>
     </array>
 </resources>
