Added padding, changed font on multiple screens. Updated build number

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
-        android:fontFamily="@font/josefin_sans_bold"
+        android:fontFamily="@font/montserrat_bold"
         android:text="@string/welcome_to_asklepius"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
@@ -29,8 +29,9 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:contentDescription="@string/add_new_patient"
-        app:icon="@drawable/ic_baseline_patient_add_24"
+        android:fontFamily="@font/montserrat"
         android:text="Add Patient"
+        app:icon="@drawable/ic_baseline_patient_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -39,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:fontFamily="@font/montserrat"
         android:onClick="onViewPatientDataButtonClicked"
         android:padding="@dimen/standard"
         android:text="@string/view_uploaded_patient_data"
@@ -52,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large"
+        android:fontFamily="@font/montserrat"
         android:onClick="onSearchPatientDataButtonClicked"
         android:padding="@dimen/standard"
         android:text="@string/search_patient_data"
