--- a/app/src/main/res/layout/activity_view_uploaded_data.xml
+++ b/app/src/main/res/layout/activity_view_uploaded_data.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:fontFamily="@font/josefin_sans_bold"
+        android:fontFamily="@font/montserrat"
         android:gravity="left"
         android:padding="8dp"
         android:text="@string/uploaded_patient_data"
@@ -26,10 +26,14 @@
         android:id="@+id/divider3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="?android:attr/listDivider"
         android:insetLeft="10dp"
         android:insetRight="10dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@id/textView_uploaded_data_heading"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView_uploaded_data_heading" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recylerView_uploaded_patient_data"
