Addressed #16 and adjusted padding of some views

--- a/app/src/main/res/layout/activity_new_patient.xml
+++ b/app/src/main/res/layout/activity_new_patient.xml
@@ -19,6 +19,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/standard"
             android:hint="@string/patient_s_name"
             app:errorEnabled="true"
             app:hintEnabled="true">
@@ -106,8 +107,8 @@
                 android:id="@+id/editText_patient_sex_other"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:autofillHints="trans"
                 android:ems="10"
