--- a/app/src/main/res/layout/activity_view_uploaded_data.xml
+++ b/app/src/main/res/layout/activity_view_uploaded_data.xml
@@ -13,11 +13,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/montserrat"
-        android:gravity="left"
+        android:gravity="start"
         android:padding="8dp"
         android:text="@string/uploaded_patient_data"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
